--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-foundation",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "description": "Foundation as React components.",
   "main": "lib/index.js",
   "jsnext:main": "src/index.js",
@@ -20,9 +20,10 @@
     "test:cover": "istanbul cover _mocha -- --compilers js:babel-core/register --require test/index.js --recursive",
     "test:watch": "npm test -- --watch --reporter min"
   },
+  "author": "LEAN BAKERY",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nordsoftware/react-foundation.git"
+    "url": "https://github.com/leanbkry/react-foundation"
   },
   "keywords": [
     "badge",
@@ -45,9 +46,9 @@
   "author": "Christoffer Niska <christofferniska@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/nordsoftware/react-foundation/issues"
+    "url": "https://github.com/leanbkry/react-foundation/issues"
   },
-  "homepage": "https://github.com/nordsoftware/react-foundation#readme",
+  "homepage": "https://github.com/leanbkry/react-foundation#readme",
   "dependencies": {
     "classnames": "^2.2.3"
   },
